2003-09-23  JP Rosevear <jpr@ximian.com>

	* pcs/cal.h: update proto

	* pcs/cal.c (impl_Cal_addTimezone): just call add_timezone, it
	does the notification
	(cal_notify_object_created): only notify the query if the object
	matches
	(cal_notify_object_removed): ditto

	* pcs/cal-backend.h: update proto, vmethod

	* pcs/cal-backend.c (cal_backend_add_timezone): returns void

	* pcs/cal-backend-sync.h: update proto, vmethod

	* pcs/cal-backend-sync.c (cal_backend_sync_remove_object): add the
	object as an out param
	(_cal_backend_remove_object): get the object and pass it in the
	notification

	* pcs/cal-backend-file.c (cal_backend_file_create_object): kill
	cal_backend_file_update_objects call, its more efficient to create
	the comp ourselves; stamp the creation time, add the component to
	the toplevel
	(cal_backend_file_modify_object): kill the
	cal_backend_file_update_objects call, add the component to the
	toplevel
	(cal_backend_file_remove_object): pass back the object when
	removing

2003-09-23  JP Rosevear  <jpr@ximian.com>

	* cal-client/cal-query.c (cal_query_finalize): disconnect the
	signal handlers

	* cal-client/cal-client.c (cal_client_get_query): unref the
	listener when done

2003-09-23  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-view.c (selection_received): add VTIMEZONE components
	contained in the clipboard data to the backend.

2003-09-22  JP Rosevear <jpr@ximian.com>

	* gui/dialogs/comp-editor.c (save_comp): modify and create instead
	of update, simplify mod code

2003-09-22  JP Rosevear <jpr@ximian.com>

	* gui/e-day-view.c (e_day_view_finish_long_event_resize): modify
	the object instead of update, simplify the instance handling
	(e_day_view_finish_resize): ditto
	(e_day_view_on_top_canvas_drag_data_received): ditto
	(e_day_view_on_main_canvas_drag_data_received): ditto

2003-09-22  Rodrigo Moya <rodrigo@ximian.com>

	* cal-client/cal-client.c (cal_client_get_alarms_in_range): use
	'has-alarms' function in the search expression.
