@@ -1,3 +1,11 @@
+2003-09-23  Rodrigo Moya <rodrigo@ximian.com>
+
+	* importers/icalendar-importer.c (update_objects): new function
+	to manage the update of components, taking into account
+	VTIMEZONE components.
+	(process_item_fn, gnome_calendar_import_data_fn): use
+	update_objects instead of cal_client_update_objects.
+
 2003-09-23  JP Rosevear <jpr@ximian.com>
 
 	* pcs/cal.h: update proto
